Remove various usages of polymorphic equality
In most cases, this fixes latent bugs, when e.g. keys cannot
safely be compared using Pervasives.compare

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,7 @@
 
 * marks some incompatible change
 
+ o fix incorrect uses of polymorphic equality (Steffen Smolka, Boris Yakobowski)
  o [Coloring] fixed generation of OCamlDoc documentation
    (contributed by Earnestly)
  * [Coloring] functions now fail if the graph is directed
