--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,8 @@
 
 * marks some incompatible change
 
+ o [WeakTopological] fixed incorrect use of generic hash tables
+   (#99, TomÃ¡Å¡ DacÃ­k)
  o [Oper] fixed transitive_reduction (#91)
  o fix incorrect uses of polymorphic equality (Steffen Smolka, Boris Yakobowski)
  o [Coloring] fixed generation of OCamlDoc documentation
@@ -33,8 +35,8 @@ version 1.8.7, April 12, 2016
  o [Components] fixed stack overflow with [scc] (patch by Albin Coquereau)
  o [Dominator] fixed stack overflow (patch by Albin Coquereau)
  o new functor [Path.Johnson] to compute all pairs of shortest paths
-   using Johnson's algorithm (contributed by Mário Pereira)
- o fixed configuration on Windows (patch by Martin R. Neuhäußer)
+   using Johnson's algorithm (contributed by MÃ¡rio Pereira)
+ o fixed configuration on Windows (patch by Martin R. NeuhÃ¤uÃŸer)
  o new functor [Components.Undirected] to compute connected components
  o Graphviz: fixed printing of attribute BgcolorWithTransparency
  * Prim, Nonnegative: function weight now has the more general type "edge -> t"
@@ -352,7 +354,7 @@ version 0.81, July 13th, 2004
 
 version 0.80, June 28th, 2004
 -----------------------------
- o major contribution by Matthieu Sozeau and Pierre-Loïc Garoche.
+ o major contribution by Matthieu Sozeau and Pierre-LoÃ¯c Garoche.
    New modules are:
    - Md: Minimum Degree algorithm
    - Cliquetree: the clique tree of a graph
